# hhcli

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  open_browser.py  package-lock.json  package.json  pyproject.toml  requirements.txt  spb_java.csv
.github/workflows/: ci.yml
docker/: nginx.conf  web.Dockerfile
hhcli/: auth.py  cli.py  config.py  db.py  diag.py  http.py  logs.py  main.py  models.py  server.py  utils.py  web_app.py
hhcli/api/: __init__.py  areas.py  dictionaries.py  employers.py  negotiations.py  professional_roles.py  resumes.py  vacancies.py
hhcli/respond/: __init__.py  constants.py  mass_utils.py  refusal_phrases.json  types.py
hhcli/tests/: test_respond_mass_utils.py  test_utils.py
web/: .eslintrc.json  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: AreaSelect.tsx  ResumeSelect.tsx  Skeleton.tsx
web/src/lib/: api.js  api.ts  queryClient.js  useLocalStorage.ts  useQuerySync.ts
web/src/pages/: OAuth.tsx  RespondMass.tsx  Search.tsx
web/src/store/: settings.ts
web/src/types/: api.ts
