[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hhcli"
version = "0.1.0"
description = "CLI + Streamlit web UI for hh.ru API (search, dicts, OAuth, exports)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "requests>=2.32,<3",
  "typer[all]>=0.12,<0.13",
]

[project.optional-dependencies]
web = [
  "streamlit>=1.31,<2",
  "pandas>=2.2,<3",
  "pyarrow>=16,<18",   # parquet export
]
dev = [
  "pytest>=8,<9",
  "black>=24.3,<25",
  "ruff>=0.4,<0.6",
]

[project.scripts]
hhcli = "hhcli.main:run"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"] # длину строки контролирует black
